--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -12,3 +12,6 @@ $gradient-active: linear-gradient(0deg, rgba(185, 12, 12, 0.8), rgba(185, 12, 12
 $footer-secondary-color: #808080;
 $download-color: #000000;
 $border-cions-color:#C6CBCD;
+$testimonials-background-color: #5C3249;
+$testimonials-btn-color: #7E5D6F;
+
