--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -657,6 +657,7 @@ body {
     height: 100%;
     top: 0;
     left: 0;
+    position: absolute;
     @media only screen and (max-width: 767px) {
       aspect-ratio: 4 / 2.65;
     }
@@ -714,7 +715,8 @@ body {
     height: 9.488px;
   }
   &:hover {
-    border: 1px solid $testimonials-background-color;
+    border: 1px solid $accent-color;
+    background: $accent-color;
   }
   &:active {
     background: $testimonials-background-color;
