--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -660,6 +660,7 @@ body {
     position: absolute;
     @media only screen and (max-width: 767px) {
       aspect-ratio: 4 / 2.65;
+      position: static;
     }
   }
 
