--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -592,9 +592,12 @@ body {
       @include font($accent-color, 18px, 400, 21px);
       margin-bottom: 17.86px;
       text-transform: uppercase;
+      @media only screen and (max-width: 1070px) {
+        font-size: 16px;
+      }
       @media only screen and (max-width: 1024px) {
         margin-bottom: 22.45px;
-        font-size: 14px;
+        font-size: 12px;
         line-height: 16px;
       }
       @media only screen and (max-width: 767px) {
